--- a/src/app/feed/feed.component.scss
+++ b/src/app/feed/feed.component.scss
@@ -1,11 +1,12 @@
 .content {
   height: calc(100vh - 64px);
-  overflow: auto;
+  width: 100%;
 }
 
 .example-card {
-  width: 35em;
+  box-sizing: border-box;
   max-width: 90%;
+  width: 35em;
   margin: 1em auto
 }
 
