--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -8,16 +8,13 @@
   margin: 1em auto;
 
   h1 {
-    font-size: 56px;
+    font-size: 4em;
     font-weight: 700;
-    line-height: 56px;
-    margin: 15px 5px;
+    line-height: 1.2em;
   }
 
   h2 {
-    font-size: 20px;
+    font-size: 1.5em;
     font-weight: 300;
-    line-height: 28px;
-    margin: 15px 0 25px;
   }
 }
